# backend/docs/swagger.json
@@ -408,7 +408,7 @@
                     {
                         "type": "string",
                         "description": "Account ID",
-                        "name": "account_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -489,7 +489,7 @@
                     {
                         "type": "string",
                         "description": "Account ID",
-                        "name": "account_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
